# openpi-franka

./: .gitignore  README.md  pyproject.toml
franka_control/: __init__.py  camera.py  eef_pose.py  franka_commander.py  franka_state_reader.py  inference.py  robotiq.py
franka_control/examples/: cartesian_test.py  compliance_test.py  get_state.py  joint_test.py  joint_velocity.py  realtime_motion.py
franka_control/scripts/: inference_franka.py
